[product-api] feat: s3, crud
