# product-api/internal/controllers/dto/characteristic.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreateCharacteristicReq struct {
+	Name        string `json:"name,omitempty"`
+	ChType      string `json:"parent_id,omitempty"`
+	Description string `json:"description,omitempty"`
+}
